Due do the DoS on the SKS servers we don't accept any key signatures by default. However, for LDAP servers we can lift this restriction because it can be assumed thar the LDAP servers are well curated
Description
Description
Revisions and Commits
Revisions and Commits
rG GnuPG | |||
rG99db4b0c7fd1 gpg: Do not use import-clean for LDAP keyserver imports. | |||
rG1303b0ed84da gpg: Do not use self-sigs-only for LDAP keyserver imports. | |||
rG6c26e593df51 gpg: Do not use self-sigs-only for LDAP keyserver imports. |
Related Objects
Related Objects